[package]
name = "chapter_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = {package ="gstreamer",version = "0.17", features =["v1_18"]}
gst_app = {package="gstreamer-app",version = "0.17.2"}
gst_audio ={package="gstreamer-audio",version = "0.17.2"}
glib = "0.14.8"
byte-slice-cast = "1.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[[bin]]
name = "chapter-1"
path = "src/chapter-1/chapter-1.rs"

[[bin]]
name = "chapter-2"
path = "src/chapter-2/chapter-2.rs"

[[bin]]
name = "chapter-3"
path = "src/chapter-3/chapter-3.rs"

[[bin]]
name = "chapter-4"
path = "src/chapter-4/chapter-4.rs"

[[bin]]
name = "chapter-6"
path = "src/chapter-6/chapter-6.rs"

[[bin]]
name = "chapter-7"
path = "src/chapter-7/chapter-7.rs"

[[bin]]
name = "chapter-8"
path = "src/chapter-8/chapter-8.rs"